fixed navbar being off center

--- a/src/App.css
+++ b/src/App.css
@@ -3,20 +3,18 @@
   font-family: 'Roboto Mono', monospace;
 }
 
-
-
 .Container {
+  background-color: purple;
   margin:0 auto;
   width:180px;
   height:50px;
-  padding-top:200px;
+  padding-top:20px;
   padding-left:15px;
   padding-right:15px;
-  padding-bottom: 20px;
 }
 
 #IndexLink {
-  float: left;
+  float: left;;
   width:60px;
   height:50px;
 }
@@ -35,5 +33,4 @@
 
 a {
   text-decoration: none;
-
 }
